--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <meta name="author" content="Ruiz Villalobo Emanuel" />
     <title>Practico JS</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./js/prueba.js"></script>
+  </body>
 </html>
